<resources>
    <string name="app_name" translatable="false">Metc</string>
    <string name="strTvCreaCuenta">Crea una Cuenta</string>
    <string name="strEdtNombre">Nombre</string>
    <string name="strEdtCorreo">Correo</string>
    <string name="strEdtContraseña">Constraseña</string>
    <string name="strBtnCrear">Crear</string>
    <string name="strBtnIngresar">Ingresar</string>
    <string name="strTxtvBienvenido">Bienvenido</string>
    <string name="nav_menu_inicio">Incio</string>
    <string name="nav_menu_buscar">Buscar</string>
    <string name="nav_menu_car">Carrito</string>
    <string name="nav_menu_inicia">Comienza o Registra</string>
    <string name="strMensajeRegistro">Debe regisrtrarse primero</string>


</resources>
