<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_met_login">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/strTxtvBienvenido"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtCorreoLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:textColor="@color/colorText"
        android:hint="@string/strEdtCorreo"
        android:textColorHint="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edtContraseñaLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:layout_marginTop="72dp"
        android:hint="@string/strEdtContraseña"
        android:textColorHint="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCorreoLogin" />
    <Button
        android:id="@+id/btnIngresarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/colorAccent"
        android:text="@string/strBtnIngresar"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseñaLogin" />

    <Button
        android:id="@+id/btnCrearLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/strBtnCrear"
        android:textColor="@color/colorSecunDaryText"
        android:onClick="onClickCrear"
        android:textColorLink="@color/lightPrimaryText"
        app:layout_constraintEnd_toStartOf="@+id/btnIngresarLogin"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseñaLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>