<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_met">

    <TextView
        android:id="@+id/textView"
        android:textColor="@color/colorAccent"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="108dp"
        android:text="@string/strTvCreaCuenta"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:hint="@string/strEdtNombre"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtCorreo"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:hint="@string/strEdtCorreo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtNombre" />

    <EditText
        android:id="@+id/edtContraseña"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:inputType="textPassword"
        android:hint="@string/strEdtContraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtCorreo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCrear"
        android:layout_marginTop="50dp"
        android:text="@string/strEdtCrear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>